@@ -51,6 +51,9 @@
 	Fixed handling of doubled commas on reading/writing filetypes from/to
 	vifminfo.
 
+	Fixed displaying of extra file line in quick view when 'tuioptions'
+	doesn't contain "p" flag.  Thanks to aleksejrs.
+
 0.8.1-beta to 0.8.1
 
 	Added summary to builtin tree implementation.  Thanks to aleksejrs.
